user-registeration/metadata/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Job_Type__c</fullName>
        <inlineHelpText>What sector is the customer classified under? 
**Only for Customer Accounts**</inlineHelpText>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Residential - Multi-Unit</fullName>
                </value>
                <value>
                    <fullName>PV Direct</fullName>
                </value>
                <value>
                    <fullName>Small Utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Procore_Vendor_ID__c</fullName>
        <label>Procore Vendor ID</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Small_Business_Type__c</fullName>
        <inlineHelpText>List any Small Business designations here</inlineHelpText>
        <label>Small Business Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Women Owned</fullName>
                </value>
                <value>
                    <fullName>HUBZone</fullName>
                </value>
                <value>
                    <fullName>Veteran Owned</fullName>
                </value>
                <value>
                    <fullName>Service Disabled Veteran Owned</fullName>
                </value>
                <value>
                    <fullName>8(a) Owned Disadvantaged</fullName>
                </value>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Native American Owned</fullName>
                </value>
                <value>
                    <fullName>Minority Owned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>